# KemiSolver101

./: .gitignore  CMakeLists.txt  README.md
Debug/: Elements.txt
KemiSolver101/: element.cpp  element.h  error.cpp  error.h  kemi.cpp  kemi.h  main.cpp
data/: Elements.txt
src/: CMakeLists.txt  element.cpp  element.hpp  error.cpp  kemi.cpp  kemi.hpp  main.cpp
